...
            android:layout_marginLeft="250dp"
            android:background="#FFF6F6"
          android:padding="8dp" />

    </LinearLayout>
    <EditText
        android:id="@+id/search_barAlbum"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/baseline_search_24"
...
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/comment_alt_dots" />
            <ImageButton
                android:id="@+id/navigation_user"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/user" />
...
