...
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="48dp" />
    <ImageButton
        android:id="@+id/settings"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/settings"
        app:layout_constraintEnd_toEndOf="parent"
...
